[package]
name = "rusty-rootsearch"
description = "This package implements general one-dimensional root-finding algorithms built on the shoulders of the num_dual crate"
readme = "README.md"
repository = "https://github.com/tsmith023/rusty-rootsearch"
keywords = ["rootsearch", "autodiff"]
license = "MIT"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-dual = "0.5.3"